<resources>
    <string name="app_name">Explor_Descartes</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="cfa">cfa</string>
    <string name="compagnon">compagnon</string>
    <string name="esiee">ESIEE</string>
    <string name="ensg">ENSG</string>
    <string name="eso">ESO</string>
    <string name="eavt">EAVT</string>
    <string name="upem">UPEM</string>
    <string name="upe">UPE</string>
    <string name="pvm">PVM</string>
    <string name="nom_appli">Explor\'Descartes</string>
    <string name="ignorerT">Vous ne souhaitez pas vous identifier ?</string>
    <string name="ignorerB">Continuer sans se connecter</string>
    <string name="ou">ou</string>
    <string name="logo">logo</string>
    <string name="inscriptionT">Vous n\'avez pas encore de compte ?</string>
    <string name="InscriptionB">Inscrivez-vous</string>
    <string name="connexion_mode">Se connecter avec :</string>
    <string name="accord">En vous inscrivant vous acceptez les <a href="http://82.229.248.34/serveur.php/">conditions générales d\'utilisation et la politique de confidentialité de l\'application.</a></string>
    <string name="prenom">Prénom (Facultatif)</string>
    <string name="mail">E-mail</string>
    <string name="nom">Nom (Facultatif)</string>
    <string name="pseudo">Pseudo</string>
    <string name="mdp">Mot de passe</string>
    <string name="mdp_confirmation">Confirmation du mot de passe</string>
    <string name="inscription_mail">Inscription avec un e-mail :</string>
    <string name="inscription_b">Accepter et s\'inscrire</string>
    <string name="connexionT">Vous avez déjà un compte ?</string>
    <string name="connexionB">Connectez-vous</string>
    <string name="connexion_mail">Connexion avec un e-mail :</string>
    <string name="connexion">Connexion</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiZGVwYXVsaXNodWdvIiwiYSI6ImNqdHI5bjM5aTBjeG8zeWw4Nm5uNXFwbDcifQ.EsWiJlDgHixCg318wbfR4A</string>
    <string name="user_location_permission_explanation">EXPLANATION_HERE</string>
    <string name="user_location_permission_not_granted">Localisation non permise</string>
    <string name="itineraire_navette">{\"type\": \"Feature\", \"geometry\": {\"type\": \"LineString\", \"coordinates\": [[2.582058,48.842621],[  2.583225,  48.842679],[  2.583249,  48.842666],[  2.583627,  48.842686],[  2.583643,  48.842661],[  2.58367,  48.842645],[  2.58371,  48.842629],[  2.583722,  48.842629],[  2.584375,  48.840691],[  2.584299,  48.840523],[  2.584243,  48.840493],[  2.584197,  48.840448],[  2.584166,  48.840397],[  2.584158,  48.840341],[  2.584161,  48.840279],[  2.584185,  48.840234],[  2.584229,  48.840188],[  2.584288,  48.840147],[  2.584347,  48.840124],[  2.584401,  48.840109],[  2.58446,  48.8401],[  2.584526,  48.840099],[  2.584602,  48.840102],[  2.584665,  48.840115],[  2.584725,  48.840136],[  2.58478,  48.840166],[  2.584815,  48.840192],[  2.584838,  48.840213],[  2.584856,  48.840238],[  2.584869,  48.840263],[  2.584886,  48.840292],[  2.585478,  48.840207],[  2.586186,  48.840102],[  2.586553,  48.840054],[  2.587306,  48.839939],[  2.587833,  48.839858],[  2.588501,  48.839769],[  2.58877,  48.839733],[  2.588979,  48.839678],[  2.589152,  48.839588],[  2.589325,  48.839465],[  2.589541,  48.83929],[  2.589399,  48.839109],[  2.589026,  48.838684],[  2.588644,  48.838247],[  2.588349,  48.837909],[  2.588262,  48.837823],[  2.588195,  48.837784],[  2.588101,  48.837747],[  2.588014,  48.837736],[  2.587931,  48.837736],[  2.587817,  48.837745],[  2.586855,  48.837882],[  2.586123,  48.837987],[  2.585635,  48.838062],[  2.585636,  48.838108],[  2.585636,  48.838147],[  2.585628,  48.838188],[  2.585611,  48.83822],[  2.585588,  48.838248],[  2.585556,  48.838277],[  2.585518,  48.838304],[  2.585458,  48.838332],[  2.585395,  48.838351],[  2.585322,  48.838359],[  2.585261,  48.838361],[  2.585196,  48.838356],[  2.58513,  48.838342],[  2.58508,  48.838322],[  2.585037,  48.838301],[  2.585002,  48.838276],[  2.584975,  48.838251],[  2.584953,  48.838223],[  2.584937,  48.838198],[  2.584928,  48.838163],[  2.584919,  48.83812],[  2.584917,  48.838085],[  2.58492,  48.838049],[  2.584935,  48.838017],[  2.58496,  48.837985],[  2.58499,  48.837955],[  2.585035,  48.837927],[  2.58508,  48.837909],[  2.585149,  48.837886],[  2.585216,  48.837872],[  2.585289,  48.837867],[  2.585357,  48.837876],[  2.585397,  48.83773],[  2.586014,  48.835907],[  2.58606,  48.835816],[  2.586159,  48.835755],[  2.586358,  48.835706],[  2.589029,  48.835324],[  2.59155,  48.834957],[  2.591654,  48.834958],[  2.591739,  48.834981],[  2.5918,  48.835026],[  2.591843,  48.835079],[  2.59246,  48.836636],[  2.593077,  48.838142],[  2.593551,  48.839314],[  2.594043,  48.840534],[  2.59412,  48.840528],[  2.594186,  48.840528],[  2.594275,  48.840541],[  2.594356,  48.840569],[  2.594412,  48.840606],[  2.594466,  48.840657],[  2.594489,  48.840703],[  2.594498,  48.84075],[  2.594498,  48.840796],[  2.594486,  48.840836],[  2.594462,  48.840876],[  2.594427,  48.84091],[  2.594395,  48.840937],[  2.594353,  48.840957],[  2.594306,  48.840976],[  2.594251,  48.840991],[  2.5942,  48.840998],[  2.594143,  48.841],[  2.594085,  48.841],[  2.594025,  48.840994],[  2.593963,  48.840978],[  2.593901,  48.840951],[  2.593858,  48.84092],[  2.593819,  48.840882],[  2.593789,  48.840835],[  2.593777,  48.840798],[  2.593774,  48.840768],[  2.59377,  48.840745],[  2.592913,  48.840707],[  2.591258,  48.840635],[  2.589843,  48.840575],[  2.589835,  48.840595],[  2.589814,  48.840611],[  2.589784,  48.840621],[  2.589748,  48.840621],[  2.589718,  48.840608],[  2.589694,  48.840588],[  2.589686,  48.840573],[  2.589021,  48.840543],[  2.5884,  48.840515],[  2.586269,  48.840425],[  2.586068,  48.84261],[  2.586028,  48.842815],[  2.585279,  48.842779],[  2.583823,  48.842707]]}}</string>
    <string name="arrets_navette">{\"type\": \"FeatureCollection\", \"features\": [{  \"type\": \"Feature\",  \"properties\": {\"name\": \"Départ\"  },  \"geometry\": {    \"type\": \"Point\",    \"coordinates\": [      2.582057,      48.84262    ]  }},{  \"type\": \"Feature\",  \"properties\": {\"name\": \"Arrêt 2\"  },  \"geometry\": {    \"type\": \"Point\",    \"coordinates\": [      2.585596,      48.837141    ]  }},{  \"type\": \"Feature\",  \"properties\": {\"name\": \"Arrêt 3\"  },  \"geometry\": {    \"type\": \"Point\",    \"coordinates\": [      2.592051,      48.835602    ]  }},{  \"type\": \"Feature\",  \"properties\": {\"name\": \"Arrêt 1\"  },  \"geometry\": {    \"type\": \"Point\",    \"coordinates\": [      2.58923,      48.838915    ]  }},{  \"type\": \"Feature\",  \"properties\": {\"name\": \"Arrêt 4\"  },  \"geometry\": {    \"type\": \"Point\",    \"coordinates\": [      2.59243,      48.836561    ]  }},{  \"type\": \"Feature\",  \"properties\": {    \"name\": \"Arrêt 5\"  },  \"geometry\": {    \"type\": \"Point\",    \"coordinates\": [      2.592878,      48.837653    ]  }},{  \"type\": \"Feature\",  \"properties\": {    \"name\": \"Arrêt 6\"  },  \"geometry\": {\"type\": \"Point\",    \"coordinates\": [      2.59165,      48.840651    ]  }},{  \"type\": \"Feature\",  \"properties\": {    \"name\": \"Arrêt 7\"  },  \"geometry\": {    \"type\": \"Point\",    \"coordinates\": [      2.586136,      48.84187    ]  }}]}</string>
    <string name="url_serveur">http://82.229.248.34/</string>
    <string name="url_serveur_ecoles">http://82.229.248.34/serveur.php/</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
        <item>3 heures</item>
        <item>6 heures</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Nouvelle notification</string>
    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="pref_ringtone_silent">Silencieux</string>
    <string name="pref_title_vibrate">Vibreur</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="google">google</string>
    <string name="email">email</string>
    <string name="nomEcole">Nom de l\'école</string>
    <string name="imageEcole">Image de l\'école</string>
    <string name="web">web</string>
    <string name="siteEcole">Site de l\'école</string>
    <string name="pointeur">pointeur</string>
    <string name="adresseEcole">Adresse de l\'école</string>
    <string name="descriptionEcole">Description de l\'établissement</string>
    <string name="descriptif">Quelques mots sur l\'établissement</string>
    <string name="favori">Mettre en favori</string>
    <string name="title_activity_planning">PlanningActivity</string>
    <string name="title_activity_template">template</string>
    <string name="menu">menu</string>
    <string name="favoris">Favoris</string>
    <string name="notifications">Notifications</string>
    <string name="planning">Planning</string>
    <string name="questionnaire_satisfaction">Questionnaire de satisfaction</string>
    <string name="application">- Application</string>
    <string name="appQ1">1) Pensez-vous que cette application vous ait été utile ?</string>
    <string name="appQ2">2) Comment avez-vous découvert l’existence de cette application ?</string>
    <string name="appQ3">3) Comment vous êtes-vous connectés ?</string>
    <string name="appQ4">4) Avez-vous téléchargé cette application avant ou pendant la JP0 ?</string>
    <string name="appQ5">5) Avez-vous planifié votre JPO à l’avance ? Si oui, avez-vous utilisé l’application ?</string>
    <string name="appQ6">6) Les notifications vous ont-elles été utiles ?</string>
    <string name="appQ7">7) Etes-vous globalement satisfaits du panel de fonctionnalités de l’application ?</string>
    <string name="gestion_compte">Gestion du compte</string>
    <string name="modifier_donnees_perso">Modifier les données Personnelles</string>
    <string name="modifier_mdp">Modifier le mot de passe</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="supprimer_compte">Supprimer son compte</string>
</resources>