<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gestionCompte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/gestion_compte"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ModifierPersoB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/modifier_donnees_perso"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/ModifierMdpB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/modifier_mdp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/Deconnexion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/deconnexion"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/Suppression"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/supprimer_compte"
        android:textColor="@android:color/white" />
</LinearLayout>