<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nom_appli"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/nom_appli"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        android:cropToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/connexion"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom_appli"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ignorer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/connexion_mode"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/reseau_sociaux"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                app:srcCompat="@drawable/facebook" />

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                app:srcCompat="@drawable/instagram" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                app:srcCompat="@drawable/google" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                app:srcCompat="@drawable/email" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/ignorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/ignorerB"
        app:layout_constraintBottom_toTopOf="@+id/inscription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connexion" />

    <LinearLayout
        android:id="@+id/inscription"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/logos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ignorer">

        <TextView
            android:id="@+id/inscriptionT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscriptionT"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/inscriptionB"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InscriptionB"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/logos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:id="@+id/ecoles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/CFA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/cfa"
                app:srcCompat="@drawable/Cfa" />

            <ImageView
                android:id="@+id/compagnon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/compagnon"
                app:srcCompat="@drawable/COMPAGNONS" />

            <ImageView
                android:id="@+id/EAVT"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/eavt"
                app:srcCompat="@drawable/EAVT" />

            <ImageView
                android:id="@+id/ENSG"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/ensg"
                app:srcCompat="@drawable/ENSG" />

            <ImageView
                android:id="@+id/ESIEE"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/esiee"
                app:srcCompat="@drawable/esiie" />

            <ImageView
                android:id="@+id/ESO"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/eso"
                app:srcCompat="@drawable/eso" />

            <ImageView
                android:id="@+id/UPEM"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/upem"
                app:srcCompat="@drawable/UPEM" />

        </TableRow>

        <TableRow
            android:id="@+id/partenaires"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/PVM"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/pvm"
                app:srcCompat="@drawable/AggloPVM" />

            <ImageView
                android:id="@+id/UPE"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/upe"
                app:srcCompat="@drawable/UPE" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>